docs: add video demo link, fix JVM alias warning, and suppress SQLite logs